feat(view):grid属性的使用

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  * @Author: CZ
  * @Date: 2022-04-14 20:15:18
  * @LastEditors: CZ
- * @LastEditTime: 2022-04-18 08:39:46
+ * @LastEditTime: 2022-04-18 14:39:33
  * @Description: 
  * @FilePath: \vue-study\public\index.html
 -->
@@ -18,7 +18,7 @@
   <style>
     body {
       background-color: rgb(255, 253, 249);
-
+      margin: auto 0;
     }
   </style>
 </head>
