--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  * @Author: CZ
  * @Date: 2022-04-14 20:15:18
  * @LastEditors: CZ
- * @LastEditTime: 2022-04-18 14:39:33
+ * @LastEditTime: 2022-04-19 15:36:41
  * @Description: 
  * @FilePath: \vue-study\public\index.html
 -->
@@ -17,8 +17,14 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
   <style>
     body {
-      background-color: rgb(255, 253, 249);
+      /* background-color: rgb(255, 253, 249); */
       margin: auto 0;
+    }
+
+    html,
+    body,
+    div {
+      height: 100%;
     }
   </style>
 </head>
