fix(view):去除simpleUI不适用vue3项目，去除div100%。引起grid格式变化

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  * @Author: CZ
  * @Date: 2022-04-14 20:15:18
  * @LastEditors: CZ
- * @LastEditTime: 2022-04-19 15:36:41
+ * @LastEditTime: 2022-04-20 15:25:43
  * @Description: 
  * @FilePath: \vue-study\public\index.html
 -->
@@ -18,13 +18,7 @@
   <style>
     body {
       /* background-color: rgb(255, 253, 249); */
-      margin: auto 0;
-    }
-
-    html,
-    body,
-    div {
-      height: 100%;
+      margin: 0 auto;
     }
   </style>
 </head>
